--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "prepare": "husky install"
   },
   "devDependencies": {
+    "airbnb": "^0.0.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
@@ -23,7 +26,7 @@
     "@changesets/cli": "^2.24.4"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "**/*.{ts,tsx}": [
       "eslint --fix"
     ],
     "*.json": [
